--- a/.github/workflows/build-app-android.yml
+++ b/.github/workflows/build-app-android.yml
@@ -9,12 +9,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: echo Hello, world!
+    - name: Install @angular/cli
+      run: npm i -D -E @angular/cli
     - name: Use coturiv/setup-ionic
       uses: coturiv/setup-ionic@v1
       with:
         cordova-version: 8
     - name: Build
-      run: |
-        ionic cordova build android --prod
+      run: ionic cordova build android --prod
