--- a/.github/workflows/build-ios-app.yml
+++ b/.github/workflows/build-ios-app.yml
@@ -16,7 +16,10 @@ jobs:
       with:
         cordova-version: 8
     - name: Build
-      run: ionic cordova build ios --prod
+      run: |
+          ionic cordova build ios
+          cd platforms/ios
+          xcodebuild -configuration Release clean archive
     - name: Upload app
       uses: actions/upload-artifact@v1
       with:
