--- a/.github/workflows/build-ios-app.yml
+++ b/.github/workflows/build-ios-app.yml
@@ -17,9 +17,7 @@ jobs:
         cordova-version: 8
     - name: Build
       run: |
-          ionic cordova build ios
-          cd platforms/ios
-          xcodebuild -configuration Release clean archive
+          ionic cordova run ios
     - name: Upload app
       uses: actions/upload-artifact@v1
       with:
