--- a/.github/workflows/build-ios-app.yml
+++ b/.github/workflows/build-ios-app.yml
@@ -20,7 +20,9 @@ jobs:
           ionic cordova platform add ios
           ionic cordova prepare ios
           cd platforms/ios
-          xcodebuild clean test -project "Ionic Conference App.xcodeproj" -scheme "Ionic Conference App" -destination "platform=iOS Simulator,name=iPhone 11 Pro"
+          ls -R
+          #xcodebuild clean test -project "Ionic Conference App.xcodeproj" -scheme "Ionic Conference App" -destination "platform=iOS Simulator,name=iPhone 11 Pro"
+          xcodebuild clean test -project "Ionic Conference App.xcodeproj" -destination "platform=iOS Simulator,name=iPhone 11 Pro"
     - name: Upload app
       uses: actions/upload-artifact@v1
       with:
