--- a/.github/workflows/build-ios-app.yml
+++ b/.github/workflows/build-ios-app.yml
@@ -22,7 +22,7 @@ jobs:
           cd platforms/ios
           ls -R
           #xcodebuild clean test -project "Ionic Conference App.xcodeproj" -scheme "Ionic Conference App" -destination "platform=iOS Simulator,name=iPhone 11 Pro"
-          xcodebuild clean test -project "Ionic Conference App.xcodeproj" -destination "platform=iOS Simulator,name=iPhone 11 Pro"
+          xcodebuild clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -project "Ionic Conference App.xcodeproj" -destination "platform=iOS Simulator,name=iPhone 11 Pro"
     - name: Upload app
       uses: actions/upload-artifact@v1
       with:
