--- a/.github/workflows/build-app-android.yml
+++ b/.github/workflows/build-app-android.yml
@@ -15,8 +15,15 @@ jobs:
       uses: coturiv/setup-ionic@v1
       with:
         cordova-version: 8
+    - name: Cache NPM dependencies
+      uses: actions/cache@v1
+      with:
+        path: node_modules
+        key: ${{ runner.OS }}-npm-cache-${{ hashFiles('**/package.json') }}
+        restore-keys: |
+          ${{ runner.OS }}-npm-cache-
     - name: Build
-      run: ionic cordova build android --prod
+      run: ionic cordova build android
     - name: Upload app
       uses: actions/upload-artifact@v1
       with:
